# GraphView

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
GraphView/: CMakeLists.txt  GraphView.cpp  GraphView.h  Main.cpp
GraphView/Adapters/: Application.h  DesignArea.cpp  DesignArea.h  Window.cpp  Window.h
GraphView/Algorithms/: BFSRunner.cpp  BFSRunner.h  DFSRunner.cpp  DFSRunner.h  DijkstraRunner.cpp  DijkstraRunner.h  EdgeAnimator.cpp  EdgeAnimator.h  Runner.h  VertexAnimator.cpp  VertexAnimator.h
GraphView/Drawing/: DrawingContext.cpp  DrawingContext.h  DrawingFunctions.cpp  DrawingFunctions.h  EdgeDrawingContext.cpp  EdgeDrawingContext.h  NoneDrawingContext.cpp  NoneDrawingContext.h  VertexDrawingContext.cpp  VertexDrawingContext.h
GraphView/Entities/: Edge.cpp  Edge.h  Entity.cpp  Entity.h  Vertex.cpp  Vertex.h
GraphView/Serialization/: Serialize.cpp  Serialize.h
GraphView/Shapes/: Circle.h  Line.h
GraphView/UIComponents/: AlgorithmTab.cpp  AlgorithmTab.h  Application.cpp  Application.h  BFSWidget.cpp  BFSWidget.h  DFSWidget.cpp  DFSWidget.h  DesignArea.cpp  DesignArea.h  DijkstraWidget.cpp  DijkstraWidget.h  EdgeObjectTabWidget.cpp  EdgeObjectTabWidget.h  GridScene.h  ObjectTab.cpp  ObjectTab.h  SettingsTab.cpp  SettingsTab.h  VertexObjectTabWidget.cpp  VertexObjectTabWidget.h  Window.cpp  Window.h
GraphView/Utils/: Colors.h  Point.h
